# TextJPEGlib

./: Memo.md  settings.gradle
app/: build.gradle
app/src/androidTest/java/com/example/textjpeg/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  Cylib.cpp  cylib.cpp
app/src/main/java/com/example/textjpeg/: ImgFileUtils.java  JpegActivity.java  Libjpeg.java  MainActivity.java  PermissionUtil.java
app/src/main/res/layout/: activity_jpeg.xml
app/src/main/res/values/: strings.xml
app/src/test/java/com/example/textjpeg/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
